fix: fix letter-spacing

--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -16,6 +16,7 @@ img {
 
 .markdown-body {
   font-size: 1.5em;
+  letter-spacing: 0.05em;
 
   & .hljs {
     border-radius: 2px;
